# directory_scan

./: .gitignore  CMakeLists.txt  README.md
doc/: C++ Coding Challenge FAQ.docx  SDEII, C++ Routing JD.docx
src/: CMakeLists.txt  bounded_file_queue.h  dirscan.cpp  dirscan.h  main.cpp
tests/: CMakeLists.txt  sample.sh  test_dirscan.cpp
